<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_height="fill_parent" android:layout_width="fill_parent" android:fillViewport="true" android:scrollbars="vertical">

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:text="@string/Regisztráció"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/felhasznalonev"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/e_mail_cim"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/jelszo"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/jelszo_megerositese"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password2EditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/telefonszam"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="11dp"

        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin" />

    <EditText
        android:id="@+id/adressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="@dimen/default_margin"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPostalAddress|textMultiLine"
        android:maxLines="3"

        />

    <RadioGroup
        android:id="@+id/accountTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adressEditText"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

      <RadioButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/buyer" />

      <RadioButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/seller" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountTypeGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="horizontal">

      <Button
          android:id="@+id/buyerRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="register"
          android:text="@string/regisztraco" />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:onClick="cancel"
          android:text="@string/cancel" />
    </LinearLayout>


  </RelativeLayout>

</ScrollView>